--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" itemscope itemtype="http://schema.org/Map">
 
 <head>
-<title>Qui est qui ? Qui fait quoi ?</title>
+<title>OII Network Visualisation Example</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" type="text/css" href="js/fancybox/jquery.fancybox.css"/>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-  <link rel="stylesheet" media="screen and (max-height: 2000px)" href="css/tablet.css" />
+  <link rel="stylesheet" media="screen and (max-height: 770px)" href="css/tablet.css" />
 </head>
 
 
@@ -31,9 +31,25 @@
 		<div id="maintitle"></div>
     <div id="title"></div>
     <div id="titletext"></div>
-    <div class="info cf">   
+    <div class="info cf">
+      <dl>
+        <dt class="moreinformation"></dt>
+        <dd class="line"><a href="#information" class="line fb">More about this visualisation</a></dd>
+      </dl>
     </div>
-
+<div id="legend">
+	<div class="box">
+		<h2>Legend:</h2>
+		<dl>
+		<dt class="node"></dt>
+		<dd></dd>
+		<dt class="edge"></dt>
+		<dd></dd>
+		<dt class="colours"></dt>
+		<dd></dd>		
+		</dl>
+	</div>
+</div> 
     <div class="b1">
     <form>
       <div id="search" class="cf"><h2>Search:</h2>
@@ -53,7 +69,9 @@
 	<div id="zoom">
   		<div class="z" rel="in"></div> <div class="z" rel="out"></div> <div class="z" rel="center"></div>
 	</div>
-	
+	<div id="copyright">
+		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="images/CC.png" /></a></div>
+	</div>
 <div id="attributepane">
 <div class="text">
 	<div title="Close" class="left-close returntext"><div class="c cf"><span>Return to the full network</span></div></div>	
@@ -62,7 +80,8 @@
 </div>	
   <div class="nodeattributes">
     <div class="name"></div>
-	    <div class="p">Connections:</div>
+	<div class="data"></div>
+    <div class="p">Connections:</div>
     <div class="link">
       <ul>
       </ul>
@@ -70,7 +89,10 @@
   </div>
 	</div>
 </div>
-
+<div id="developercontainer">
+	<a href="http://www.oii.ox.ac.uk" title="Oxford Internet Institute"><div id="oii"><span>OII</span></div></a>
+	<a href="http://jisc.ac.uk" title="JISC"><div id="jisc"><span>JISC</span></div></a>	
+</div>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
