--- a/index.html
+++ b/index.html
@@ -32,9 +32,24 @@
     <div id="title"></div>
     <div id="titletext"></div>
     <div class="info cf">
-     
+      <dl>
+        <dt class="moreinformation"></dt>
+        <dd class="line"><a href="#information" class="line fb">More about this visualisation</a></dd>
+      </dl>
     </div>
-
+<div id="legend">
+	<div class="box">
+		<h2>Legend:</h2>
+		<dl>
+		<dt class="node"></dt>
+		<dd></dd>
+		<dt class="edge"></dt>
+		<dd></dd>
+		<dt class="colours"></dt>
+		<dd></dd>		
+		</dl>
+	</div>
+</div> 
     <div class="b1">
     <form>
       <div id="search" class="cf"><h2>Search:</h2>
@@ -74,7 +89,10 @@
   </div>
 	</div>
 </div>
-
+<div id="developercontainer">
+	<a href="http://www.oii.ox.ac.uk" title="Oxford Internet Institute"><div id="oii"><span>OII</span></div></a>
+	<a href="http://jisc.ac.uk" title="JISC"><div id="jisc"><span>JISC</span></div></a>	
+</div>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
