--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" itemscope itemtype="http://schema.org/Map">
 
 <head>
-<title>OII Network Visualisation Example</title>
+<title>Diagramme des relations entre gens de pouvoir</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" type="text/css" href="js/fancybox/jquery.fancybox.css"/>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-  <link rel="stylesheet" media="screen and (max-height: 770px)" href="css/tablet.css" />
+  <link rel="stylesheet" media="screen and (max-height: 400px)" href="css/tablet.css" />
 </head>
 
 
@@ -34,7 +34,7 @@
     <div class="info cf">
       <dl>
         <dt class="moreinformation"></dt>
-        <dd class="line"><a href="#information" class="line fb">More about this visualisation</a></dd>
+        <dd class="line"><a href="#information" class="line fb">Plus d'informations</a></dd>
       </dl>
     </div>
 <div id="legend">
@@ -58,12 +58,8 @@
   <div id="information">
   </div>
 </div>
-	<div id="zoom">
-  		<div class="z" rel="in"></div> <div class="z" rel="out"></div> <div class="z" rel="center"></div>
-	</div>
-	<div id="copyright">
-		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="images/CC.png" /></a></div>
-	</div>
+	
+		</div>
 <div id="attributepane">
 <div class="text">
 	<div title="Close" class="left-close returntext"><div class="c cf"><span>Return to the full network</span></div></div>	
