--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Diagramme des relations entre gens de pouvoir</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
+<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=yes" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
 
