--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
 
 <body>
+	<div id="sfch6kq3r25y34axhrxll8l53nzsamdq8zy"></div>
+	<script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=h6kq3r25y34axhrxll8l53nzsamdq8zy&down=async" async></script>
+	<br>
+	<a href="https://www.compteurdevisite.com">compteur web</a>
+	<noscript>
+		<a href="https://www.compteurdevisite.com" title="compteur web">
+		<img src="https://counter6.optistats.ovh/private/compteurdevisite.php?c=h6kq3r25y34axhrxll8l53nzsamdq8zy" border="0" title="compteur web" alt="compteur web">
+		</a>
+	</noscript>
   <div class="sigma-parent">
     <div class="sigma-expand" id="sigma-canvas"></div>
   </div>
