--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" itemscope itemtype="http://schema.org/Map">
 
 <head>
-<title>OII Network Visualisation Example</title>
+<title>Map of the problematique</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
@@ -37,19 +37,7 @@
         <dd class="line"><a href="#information" class="line fb">More about this visualisation</a></dd>
       </dl>
     </div>
-<div id="legend">
-	<div class="box">
-		<h2>Legend:</h2>
-		<dl>
-		<dt class="node"></dt>
-		<dd></dd>
-		<dt class="edge"></dt>
-		<dd></dd>
-		<dt class="colours"></dt>
-		<dd></dd>		
-		</dl>
-	</div>
-</div> 
+
     <div class="b1">
     <form>
       <div id="search" class="cf"><h2>Search:</h2>
@@ -66,12 +54,7 @@
   <div id="information">
   </div>
 </div>
-	<div id="zoom">
-  		<div class="z" rel="in"></div> <div class="z" rel="out"></div> <div class="z" rel="center"></div>
-	</div>
-	<div id="copyright">
-		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="images/CC.png" /></a></div>
-	</div>
+	
 <div id="attributepane">
 <div class="text">
 	<div title="Close" class="left-close returntext"><div class="c cf"><span>Return to the full network</span></div></div>	
