--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ h1 {
 <body>
 <p><a href="https://ouestware.gitlab.io/retina/beta/#/graph/?url=https://gist.githubusercontent.com/assourbanipal/bca422c384cf5c89ba5cfef5ffc68692/raw/d39c83db5d70d49b99d699eafe1813d6bd6d9663/network-2a974baf-c51.gexf"><b>Cliquez ici pour être rerouté(e) vers la carte</b></a></p>
 <p>Le temps de chargement peut être un peu long selon votre connexion et votre téléphone.</p>
+<p> </p>
+<p> </p>
+<p><a href="https://collectiflaser.forumactif.com/"><b>Ici, vous pouvez trouver un forum qui n'a rien à voir mais qui possède plein d'informations potentiellement intéressantes</b></p>
   
   <script>function artFunction() {
   // Declare starting variables
