--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h1 {
 </style>
 </head>
 <body>
-<p><a href="https://ouestware.gitlab.io/retina/beta/#/graph/?url=https://gist.githubusercontent.com/assourbanipal/bca422c384cf5c89ba5cfef5ffc68692/raw/d39c83db5d70d49b99d699eafe1813d6bd6d9663/network-2a974baf-c51.gexf"><b>Cliquez ici pour être rerouté(e) vers la carte</b></a></p>
+<p><a href="https://ouestware.gitlab.io/retina/beta/#/graph/?url=https%3A%2F%2Fraw.githubusercontent.com%2Fassourbanipal%2Fassourbanipal.github.io%2Frefs%2Fheads%2Fmain%2Fcomplof%2520mise%2520%25C3%25A0%2520jour%252014072025.gexf&sa=re&ca=t%20&st=t&ec=o&ed=u"><b>Cliquez ici pour être rerouté(e) vers la carte</b></a></p>
 <p>Le temps de chargement peut être un peu long selon votre connexion et votre téléphone.</p>
 <p> </p>
 <p> </p>
