--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h1 {
 </style>
 </head>
 <body>
-<p><a href="https://ouestware.gitlab.io/retina/beta/#/graph/?url=https%3A%2F%2Fraw.githubusercontent.com%2Fassourbanipal%2Fassourbanipal.github.io%2Frefs%2Fheads%2Fmain%2Fcomplof%2520mise%2520%25C3%25A0%2520jour%252014072025.gexf&sa=re&ca=t&st=t&ec=o&ed=u"><b>Cliquez ici pour être rerouté(e) vers la carte</b></a></p>
+<p><a href="https://ouestware.gitlab.io/retina/beta/#/graph/?url=https%3A%2F%2Fgist.githubusercontent.com%2Fassourbanipal%2F9ee8efa6f37edf264f288bf7100243bb%2Fraw%2Fa04f5c56592cbf7be163602790c2b98144ae1adc%2Fnetwork-b61de868-bf4.gexf&c=t&ca=t&st=t&ec=o&ed=u"><b>Cliquez ici pour être rerouté(e) vers la carte</b></a></p>
 <p>Le temps de chargement peut être un peu long selon votre connexion et votre téléphone.</p>
 <p> </p>
 <p> </p>
