--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h1 {
 </style>
 </head>
 <body>
-<p><a href="https://ouestware.gitlab.io/retina/beta/#/graph/?url=https://gist.githubusercontent.com/assourbanipal/8fc4fe93aa291c8d99aeacefe554d42c/raw/c4676a032e84c5961f5da7b58f303cd9332758ff/network-4d45665b-96f.gexfhttps://ouestware.gitlab.io/retina/beta/#/graph/?url=https://gist.githubusercontent.com/assourbanipal/8fc4fe93aa291c8d99aeacefe554d42c/raw/c4676a032e84c5961f5da7b58f303cd9332758ff/network-4d45665b-96f.gexf&c=t&ca=t&st=t&ec=o&ed=u"><b>Cliquez ici pour être rerouté(e) vers la carte</b></a></p>
+<p><a href="https://ouestware.gitlab.io/retina/beta/#/graph/?url=https://gist.githubusercontent.com/assourbanipal/8fc4fe93aa291c8d99aeacefe554d42c/raw/c4676a032e84c5961f5da7b58f303cd9332758ff/network-4d45665b-96f.gexf&c=t&ca=t&st=t&ec=o&ed=u"><b>Cliquez ici pour être rerouté(e) vers la carte</b></a></p>
 <p>Le temps de chargement peut être un peu long selon votre connexion et votre téléphone.</p>
 <p> </p>
 <p> </p>
